# lapel

./: .flake8  COPYING  README.md  meson.build  org.dithernet.lapel.json  requirements.txt  run
data/: lapel.gresource.xml  meson.build  org.dithernet.lapel.appdata.xml.in  org.dithernet.lapel.desktop.in  org.dithernet.lapel.gschema.xml  style-dark.css  style.css
data/icons/: meson.build
data/ui/: about.ui  assistant.ui  meson.build  messageview.ui  pair.ui  popup.ui  preferences.ui  skills.ui  skillview.ui  speechview.ui  window.ui
po/: LINGUAS  POTFILES  da.po  en.po  fr.po  ko.po  lapel.pot  meson.build  nb_NO.po  pl.po  tr.po  update-po
src/: assistant.py  config.py  daemon.py  lapel.in  main.py  meson.build  message.py  skill.py  skills_page.py  window.py
src/types/: meson.build  message.py  skill.py
src/ui/: about.ui  assistant.ui  lapel.gresource.xml  meson.build  window.ui
src/views/: assistant.py  meson.build  pair.py  popup.py  preferences.py  skills.py
src/wrappers/: __init__.py  common.py  dialog.py  gui.py  meson.build  wrappers.py
